Bug 12302 - Backward brigthess level
Summary: Backward brigthess level
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Video (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Zhang Rui
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-26 01:44 UTC by Evgeniy Manachkin
Modified: 2009-04-07 03:02 UTC (History)
3 users (show)

See Also:
Kernel Version: 2.6.28
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Asus X51L acpi dump (90.01 KB, application/bzip2)
2008-12-28 17:22 UTC, Evgeniy Manachkin
Details
patch: video cleanup (10.21 KB, patch)
2009-03-09 23:06 UTC, Zhang Rui
Details | Diff

Description Evgeniy Manachkin 2008-12-26 01:44:45 UTC
Latest working kernel version: 2.6.27.10
Earliest failing kernel version: 2.6.28
Distribution: all
Hardware Environment: Notebook asus X51L
Software Environment: all
Problem Description:backward brigthess level

Steps to reproduce: start Kpowersave and select brigthess level 

Asus X51L backward brigthess trouble.

/proc/acpi/video/VGA/LCDD/brightness - work fine 0-min 15-max
/sys/class/backlight/acpi_video0/brightness - trouble 0-max 15-min

Kpowersave work bad - 100%-min 1%-max

In dmesg:

Dec 25 23:47:08 sfstudio kernel: 
ACPI: Please implement acpi_video_bus_ROM_seq_show
Dec 26 01:34:14 sfstudio kernel: asus-laptop: Asus Laptop Support version 0.42
Dec 26 01:34:14 sfstudio kernel: asus-laptop:   X51L model detected
Dec 26 01:34:14 sfstudio kernel: asus-laptop: Brightness ignored, must be
controlled by ACPI video driver
Dec 26 01:34:14 sfstudio kernel: Registered led device: asus::mail
Dec 26 01:37:29 sfstudio kernel: asus-laptop: Asus Laptop Support version 0.42
Dec 26 01:37:29 sfstudio kernel: asus-laptop:   X51L model detected
Dec 26 01:37:29 sfstudio kernel: asus-laptop: Brightness ignored, must be
controlled by ACPI video driver
Dec 26 01:37:29 sfstudio kernel: Registered led device: asus::mail
Dec 26 01:39:20 sfstudio kernel: asus-laptop: Asus Laptop Support version 0.42
Dec 26 01:39:20 sfstudio kernel: asus-laptop:   X51L model detected
Dec 26 01:39:20 sfstudio kernel: asus-laptop: Brightness ignored, must be
controlled by ACPI video driver
Dec 26 01:39:20 sfstudio kernel: Registered led device: asus::mail
Dec 26 01:40:31 sfstudio kernel: asus-laptop: Asus Laptop Support version 0.42
Dec 26 01:40:31 sfstudio kernel: asus-laptop:   X51L model detected
Dec 26 01:40:31 sfstudio kernel: asus-laptop: Brightness ignored, must be
controlled by ACPI video driver
Dec 26 01:40:31 sfstudio kernel: Registered led device: asus::mail

Kernel:
[root@sfstudio kernel]# uname -a
Linux sfstudio.sadnet.lo 2.6.28 #2 SMP PREEMPT Thu Dec 25 17:14:54 OMST 2008
i686 Intel(R) Celeron(R) CPU          540  @ 1.86GHz GNU/Linux
Comment 1 ykzhao 2008-12-28 16:51:48 UTC
Will you please try the patch in http://bugzilla.kernel.org/show_bug.cgi?id=12037#C5 and see whether the issue still exists?
    Please attach the output of acpidump.
    Thanks.
Comment 2 Zhang Rui 2008-12-28 17:13:19 UTC
Evgeniy and kel,
you'd better attach the acpidump output as well.
Comment 3 Evgeniy Manachkin 2008-12-28 17:22:09 UTC
Created attachment 19512 [details]
Asus X51L acpi dump

Make dumpe:

[root@sfstudio !!]# acpidump > dump
Wrong checksum for GSCI
Wrong checksum for ATKG
Wrong checksum for GSCI!
Wrong checksum for ATKG!
[root@sfstudio !!]# acpidump -b > dump.bin
Wrong checksum for GSCI
Wrong checksum for ATKG
Wrong checksum for GSCI!
Wrong checksum for ATKG!

It`s normal ?
Comment 4 Evgeniy Manachkin 2008-12-28 17:24:09 UTC
(In reply to comment #1)
> Will you please try the patch in
> http://bugzilla.kernel.org/show_bug.cgi?id=12037#C5 and see whether the issue
> still exists?

The problem similar, but does not dare the patch offered there.
Comment 5 Zhang Rui 2008-12-28 17:40:34 UTC
well, I've read the acpidump attached.
And it seems that you need a similar fix like the bug 12037.
I mean the patch http://bugzilla.kernel.org/show_bug.cgi?id=12037#C5 is not sufficent for you. A customized DSDT is needed at the same time.

please try boot option "acpi_backlight=vendor" and see if it helps.
Comment 6 Evgeniy Manachkin 2008-12-28 18:58:36 UTC
In kernel documentation say: "cpi_backlight= [HW,ACPI]
                        acpi_backlight=vendor
                        acpi_backlight=video
                        If set to vendor, prefer vendor specific driver
                        (e.g. thinkpad_acpi, sony_acpi, etc.) instead
                        of the ACPI video.ko driver."
And where I can specify accessible values of parametre?
Comment 7 Evgeniy Manachkin 2008-12-29 12:30:21 UTC
>please try boot option "acpi_backlight=vendor" and see if it helps.

With this option brightness is always minimum. Kpowersave and special keys do not work.
Comment 8 Zhang Rui 2008-12-29 18:01:13 UTC
then what's the symptom of the old working kernel without ACPI video driver loaded?

please attach the output of "grep . /sys/class/backlight/*/*" in:
1. the old working kernel without viode driver loaded, e.g. 2.6.27.10
2. 2.6.28 with boot option "acpi_backlight=vendor"
Comment 9 Zhang Rui 2009-01-11 17:52:40 UTC
ping Evgeniy
Comment 10 Evgeniy Manachkin 2009-01-11 17:55:42 UTC
Sorry, in kernel 2.6.29rc1 backlight work OK. Thanks.
Comment 11 Zhang Rui 2009-01-13 01:04:05 UTC
please try the 2.6.28 kernel and attach the info requested in comment #8
Comment 12 ykzhao 2009-02-23 01:13:16 UTC
Hi, Rui
    From the comment #10 it seems that this issue is already fixed in the latest kernel. 
    How about close this bug?
    Thanks.
Comment 13 Zhang Rui 2009-03-09 23:06:15 UTC
Created attachment 20478 [details]
patch: video cleanup

please try this patch and see if the problem is fixed.
please attach the content of /proc/acpi/video/*/*/brightness with this patch as well.
Comment 14 Zhang Rui 2009-03-12 01:41:35 UTC
hi, the previous patch you tested is not for upstream kernel.
please try this patch in
http://bugzilla.kernel.org/show_bug.cgi?id=12249#c69
Comment 16 Len Brown 2009-04-07 03:02:36 UTC
shipped in 2.6.30 merge window (2.6.29-git14)

closed

commit 1a7c618a3f7bef1a20ae740df512eeba21397fa5
Author: Zhang Rui <rui.zhang@intel.com>
Date:   Wed Mar 18 16:27:16 2009 +0800

    ACPI video: support _BQC/_BCL/_BCM methods that use index values

Note You need to log in before you can comment on or make changes to this bug.